[package]

name = "glusterchangelog"
version = "0.1.2"
authors = ["Aravinda VK <mail@aravindavk.in>"]
description = "A lib and tool to parse Gluster Changelogs"
documentation = "https://github.com/aravindavk/glusterchangelog/blob/master/README.md"
homepage = "https://github.com/aravindavk/glusterchangelog"
repository = "https://github.com/aravindavk/glusterchangelog"
readme = "README.md"
keywords = ["gluster"]
license = "MIT"

[lib]
name = "glusterchangelog"
crate-type = ["rlib"]

[[bin]]
name = "glusterchangelogparser"
